Fix error to separate tasks to show correctly within individual project

--- a/src/styles/website.css
+++ b/src/styles/website.css
@@ -184,6 +184,7 @@ main .side-nav.active {
 	transform: rotate(360deg);
 }
 .project-link-div {
+	cursor: pointer;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
