--- a/src/styles/website.css
+++ b/src/styles/website.css
@@ -208,7 +208,7 @@ main .side-nav.active {
 .project-link-div p {
 	font-size: 1.2rem;
 	flex: 1;
-   overflow: hidden;
+	overflow: hidden;
 }
 .project-link-div .editIcon {
 	width: 23px;
@@ -250,6 +250,12 @@ main .main-content {
 	padding: 5px;
 	border-bottom: 1px solid rgb(192, 192, 192);
 	font-size: 1.1rem;
+	display: flex;
+	flex-flow: column;
+	gap: 5px;
+}
+.task-info-container p {
+	margin: 0;
 }
 /* "Add Task" button */
 .add-task-btn {
