--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -166,7 +166,7 @@
 	border: 1px solid rgb(165, 165, 165);
 	background-color: rgb(230, 230, 230);
 }
-.priority-container:focus .dropdown-container {
+.priority-container .dropdown-container.active {
 	display: block;
 }
 
