Add data picker value to task list and shows it in task modal too

--- a/src/styles/task.css
+++ b/src/styles/task.css
@@ -33,6 +33,11 @@
    align-items: center;
    justify-content: space-between;
 }
+.task-inner-right-container {
+	display: flex;
+	gap: 10px;
+	align-items: center;
+}
 
 
 /* priority flags in tasks */
