Add priority flags to show on modal, revamp reset logic minor styling for priority

--- a/src/styles/date.css
+++ b/src/styles/date.css
@@ -6,7 +6,7 @@
    align-items: center;
 }
 
-/* Hide the default input field */
+/* Hide the default input field & set width/height for overall container */
 .date-picker-container input[type="date"] {
 	appearance: none;
 	-webkit-appearance: none;
@@ -21,7 +21,7 @@
 
 /* Style the calendar icon (Set background to cover entire input) */
 input[type="date"]::-webkit-calendar-picker-indicator {
-	background: url("../assets/calendar.svg") center/cover no-repeat; /* Replace with your icon path */
+	background: url("../assets/calendar.svg") center/cover no-repeat; 
 	width: 100%;
 	height: 100%;
 	cursor: pointer;
