--- a/src/styles/website.css
+++ b/src/styles/website.css
@@ -232,6 +232,7 @@ main .main-content {
 	width: 100%;
 	padding: 30px;
 	background-color: rgb(255, 255, 255);
+	overflow-y: auto;
 }
 .taskInfoHeader {
 	width: 100%;
