--- a/src/styles/task.css
+++ b/src/styles/task.css
@@ -1,5 +1,7 @@
 :root {
 	--roundCheckboxColor: #57c2ef;
+	--faded-color: rgb(155, 155, 155);
+	--completed-background: rgb(240, 245, 248);
 }
 /** OVERALL TASK LIST **/
 .task-list {
@@ -78,8 +80,8 @@ img.flag-low {
 /** Round checkbox btn **/
 .roundCheckBtn {
 	position: relative;
- }
- .roundCheckBtn label {
+}
+.roundCheckBtn label {
 	background-color: #fff;
 	border: 1px solid #ccc;
 	border-radius: 50%;
@@ -87,9 +89,9 @@ img.flag-low {
 	height: 25px;
 	width: 25px;
 	display: flex;
- }
- /* This is the check icon that appears when checkbox is active */
- .roundCheckBtn label:after {
+}
+/* This is the check icon that appears when checkbox is active */
+.roundCheckBtn label:after {
 	content: "";
 	border: 2px solid #fff;
 	border-top: none;
@@ -101,15 +103,21 @@ img.flag-low {
 	opacity: 0;
 	position: absolute;
 	transform: rotate(-45deg);
- }
- .roundCheckBtn input[type="checkbox"] {
+}
+.roundCheckBtn input[type="checkbox"] {
 	visibility: hidden;
 	position: absolute;
- }
- .roundCheckBtn input[type="checkbox"]:checked + label {
+}
+.roundCheckBtn input[type="checkbox"]:checked + label {
 	background-color: var(--roundCheckboxColor);
 	border-color: var(--roundCheckboxColor);
- }
- .roundCheckBtn input[type="checkbox"]:checked + label:after {
+}
+.roundCheckBtn input[type="checkbox"]:checked + label:after {
 	opacity: 1;
- }
+}
+
+.taskComplete {
+	text-decoration: line-through;
+	color: var(--faded-color);
+	background-color: var(--completed-background);
+}
