--- a/src/styles/website.css
+++ b/src/styles/website.css
@@ -250,7 +250,7 @@ main .main-content {
 	content: "";
 	position: absolute;
 	left: 0;
-	background-color: black;
+	background-color: rgb(171, 51, 51);
 	top: 30px;
 	height: 2px;
 	width: 100%;
@@ -266,7 +266,7 @@ main .main-content {
 	left: 50%;
 	top:50%;
 	transform: translate(-50%, -50%);
-	margin-top: -10px;
+	margin-top: -5px;
 }
 .horrayMessage .text1 {
 	font-size: 2rem;
